@@ -202,6 +202,7 @@ $wgOptionalMessages = array(
 	'chick.css',
 	'simple.css',
 	'modern.css',
+	'print.css',
 	'common.js',
 	'standard.js',
 	'nostalgia.js',
